--- a/src/server/views/partials/home/media-grid-primary-item.html
+++ b/src/server/views/partials/home/media-grid-primary-item.html
@@ -9,7 +9,7 @@
 			src="{{mediaItem.miniVideoSegment}}">
 		</video>
 	{% else %}
-		<img src="{{mediaItem.url}}" alt="">
+		<img src="{{mediaItem.url}}" loading="lazy">
 	{% endif %}
 
 	<p class="media-grid__primary-item__date">
