Adds segment duration

--- a/src/server/views/_base.html
+++ b/src/server/views/_base.html
@@ -13,7 +13,7 @@
       <title>{{config.productName}}</title>
     {% endif %}
     <link rel="stylesheet" href="{{rev('css/main.css')}}">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,700,800%7cCardo:400italic%7cMerriweather:400,300,300italic,400italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,700,800%7cCardo:400italic%7cMerriweather:400,300,300italic,400italic&display=swap' rel='stylesheet' type='text/css'>
     {% block css %}{% endblock %}
 
   </head>
@@ -26,7 +26,7 @@
     <script>
       window.everyDayVideoConfig = {
         thumbnailsAmount: {{config.thumbnailsAmount}}
-      }
+      };
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/nunjucks/3.0.1/nunjucks-slim.min.js" integrity="sha256-tdB3uMy+X5YRM5JMGgy1oMtdSm1GwTEMmWb7q80e2+g=" crossorigin="anonymous"></script>
 
