--- a/src/server/views/_base.html
+++ b/src/server/views/_base.html
@@ -36,5 +36,11 @@
     <script src="{{rev('js/templates.js')}}"></script>
     <script async src="{{rev('js/main.js')}}"></script>
     {% block js %}{% endblock %}
+
+    <!-- TODO: Only enable for development! -->
+    <script>
+      document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
+        ':35729/livereload.js?snipver=1"></' + 'script>')
+    </script>
   </body>
 </html>
