--- a/src/server/views/partials/nav.html
+++ b/src/server/views/partials/nav.html
@@ -4,7 +4,7 @@
 
 		<ul class="nav__menu">
 			<li>
-				<a href="/Thing">Thing</a>
+				<a href="/playlists">playlists</a>
 			</li>
 		</ul>
 	</div>
