--- a/src/server/views/partials/home/main.html
+++ b/src/server/views/partials/home/main.html
@@ -6,19 +6,22 @@
 	</article>
 
 	<ul class="media-grid">
-		{% for dateBucket, mediaItems in dateBuckets %}
+		{% for bucketTitle, dateBucket in dateBuckets %}
 			<li class="media-grid__list-item">
 				<ol class="media-grid__alternatives">
-					{% for index in range(0, mediaItems.length) %}
-						{% set mediaItem = mediaItems[index] %}
-
-						<li class="media-grid__alternatives-list-item {{ "media-grid__alternatives-list-item--active" if loop.first }}">
+					{% for mediaItem in dateBucket.items %}						
+						{% if mediaItem.isSelected %}
+							<li class="media-grid__alternatives-list-item media-grid__alternatives-list-item--active">
+						{% else %}
+							<li class="media-grid__alternatives-list-item">
+						{% endif %}
 							<p
 								data-is-video="{{mediaItem.isVideo}}"
 								data-formatted-date="{{mediaItem.formattedDate}}"
 								data-url="{{mediaItem.url}}"
 								data-name="{{mediaItem.filename}}"
 								data-mini-video-segment="{{mediaItem.miniVideoSegment}}"
+								data-id="{{mediaItem.id}}"
 							>
 								{% if mediaItem.isVideo %}
 									🎥️ &nbsp;{{mediaItem.videoDuration}}
@@ -31,9 +34,8 @@
 					{% endfor %}
 				</ol>
 
-				{% set mediaItem = mediaItems[0] %}
+				{% set selectedMediaItem = dateBucket.selectedMediaItem %}
 				{% include './media-grid-primary-item.html' %}
-
 			</li>
 		{% endfor %}
 	</ul>
