--- a/src/client/css/base/mvp.scss
+++ b/src/client/css/base/mvp.scss
@@ -5,7 +5,7 @@
     --box-shadow: 2px 2px 10px;
     --color: #118bee;
     --color-accent: #118bee15;
-    --color-bg: #fff;
+    --color-bg: #fff9f5;
     --color-bg-secondary: #e9e9e9;
     --color-secondary: #920de9;
     --color-secondary-accent: #920de90b;
