--- a/src/server/views/partials/playlists/playlist-form.html
+++ b/src/server/views/partials/playlists/playlist-form.html
@@ -1,17 +1,58 @@
 <div class="form-group">
-    <label for="playlist-name">Name</label>
 
-    <input
-        id="playlist-name"
-        type="text"
-        name="playlist-name"
-        class="form-control"
-        {% if playlistName %}
-            value="{{playlistName}}"
-        {% else %}
-        🖼  placeholder="My new playlist 1"
-        {% endif %}
-    >
+	{% if not playlistName %}
+		<h3>
+			Create a new playlist
+		</h3>
+	{% endif %}
+
+	<label for="playlist-name">Name</label>
+
+	<input
+		id="playlist-name"
+		type="text"
+		name="playlist-name"
+		class="form-control"
+		{% if playlistName %}
+			value="{{playlistName}}"
+		{% else %}
+		🖼  placeholder="My new playlist 1"
+		{% endif %}
+	>
 </div>
 
-<button type="submit" class="btn btn-default">Submit</button>
+{% if playlistName %}
+	<div class="form-group">
+		<p>
+			Trim the final video to only include media within these inclusive dates
+		</p>
+
+		<label for="start">Start date (inclusive):</label>
+		<input
+			type="date"
+			id="start-date"
+			name="start-date"
+			{% if playlistStartDate %}
+				value="{{playlistStartDate | formatForHTMLDateInput}}"
+			{% endif %}
+		>
+
+		<label for="start">End date (inclusive):</label>
+		<input
+			type="date"
+			id="end-date"
+			name="end-date"
+			{% if playlistEndDate %}
+				value="{{playlistEndDate | formatForHTMLDateInput}}"
+			{% endif %}
+		>
+	</div>
+{% endif %}
+
+<div class="buttons-container">
+	<button type="submit" class="btn btn-default">Submit</button>
+
+	<button type="reset">
+		Reset
+	</button>
+</div>
