--- a/src/server/views/partials/nav.html
+++ b/src/server/views/partials/nav.html
@@ -2,4 +2,8 @@
 	<div class="nav__container">
 		<h1><a href="/">{{config.productName}}</a></h1>
 	</div>
+
+	<button class="consolidate-media">
+		Consolidate Media
+	</button>
 </nav>
